--- a/src/app/root.css
+++ b/src/app/root.css
@@ -1,3 +1,17 @@
 html {
-  overflow-x: hidden; /* prevent horizontall scroll */
+  background-color: #f0f0f8;
+  height: 100vh;
+  margin: 0;
+  overflow-x: hidden; /* prevent horizontal overscroll */
+  padding: 0;
+  width: 100vw;
+}
+
+body,
+#root {
+  display: block;
+  height: inherit;
+  margin: 0 auto;
+  padding: 0;
+  width: inherit;
 }
