--- a/src/app/components/App.css
+++ b/src/app/components/App.css
@@ -1,6 +1,8 @@
 .main {
-  align-items: center;
+  align-content: center;
   display: flex;
+  flex-wrap: wrap;
+  gap: 16px;
   height: 100svh;
   justify-content: center;
   width: 100svw;
