--- a/src/app/providers/CursorProvider.css
+++ b/src/app/providers/CursorProvider.css
@@ -1,11 +1,11 @@
 .cursor-icon {
-  height: 32px;
+  height: var(--game-cell-size-min);
   left: 0;
   pointer-events: none;
   position: fixed;
   top: 0;
   transform: translate(-50%, -50%);
-  width: 32px;
+  width: var(--game-cell-size-min);
   z-index: 999;
 }
 
