add selected cell

--- a/src/app/components/Cell.css
+++ b/src/app/components/Cell.css
@@ -21,6 +21,10 @@
 
 .game-cell.highlight {
   background-color: var(--highlight);
+  cursor: pointer;
+}
+.game-cell.highlight .token {
+  background-color: transparent;
 }
 
 .game-cell.lowlight {
