--- a/src/app/components/Game.css
+++ b/src/app/components/Game.css
@@ -2,8 +2,8 @@
   --border-color: #000000;
   --filled: #dfdfdf;
   --empty: #ffffff;
-  --highlight: #fec468;
-  --lowlight: #f9eac2;
+  --highlight: #f88806;
+  --lowlight: #fec468;
 }
 
 :root {
