--- a/src/app/components/Symbol.css
+++ b/src/app/components/Symbol.css
@@ -1,27 +1,27 @@
 .symbol-x {
-  background-color: red;
-  border-radius: 6px;
-  height: 40px;
+  align-items: center;
+  aspect-ratio: 1;
+  display: flex;
+  height: 100%;
   position: relative;
-  width: 40px;
+  width: 100%;
 }
 
 .symbol-x:before,
 .symbol-x:after {
-  background-color: white;
+  background-color: #ffffff;
   border-radius: 2px;
   content: '';
   height: 4px;
   position: absolute;
-  top: 16px;
-  width: 36px;
+  width: 100%;
 }
 
 .symbol-x:before {
-  left: 2px;
+  left: 0;
   transform: rotate(45deg);
 }
 .symbol-x:after {
-  right: 2px;
+  right: 0;
   transform: rotate(-45deg);
 }
