--- a/src/app/components/Game.css
+++ b/src/app/components/Game.css
@@ -15,6 +15,17 @@
 .game {
   align-content: center;
   align-items: center;
+  display: flex;
+  flex-wrap: wrap;
+  gap: 16px;
+  height: 100%;
+  justify-content: center;
+  width: 100%;
+}
+
+.game-board {
+  align-content: center;
+  align-items: center;
   aspect-ratio: 1;
   border-bottom: 1px solid var(--border-color);
   border-left: 2.5px solid var(--border-color);
