--- a/src/app/root.css
+++ b/src/app/root.css
@@ -15,3 +15,11 @@ body,
   padding: 0;
   width: inherit;
 }
+
+*,
+::before,
+::after {
+  border-radius: inherit;
+  box-sizing: border-box;
+  flex-shrink: 0;
+}
