--- a/src/app/providers/ModalProvider.css
+++ b/src/app/providers/ModalProvider.css
@@ -8,15 +8,16 @@
 }
 
 .modal {
-  backdrop-filter: blur(4px);
-  background-color: #08151c99;
-  border-radius: 12px;
-  box-shadow: rgb(38, 57, 77) 0px 20px 30px -10px;
-  color: white;
+  background-color: #f2f2f2;
+  border-radius: 16px;
+  box-shadow:
+    rgb(38, 57, 77) 0px 20px 30px -10px,
+    rgba(50, 50, 93, 0.25) 0px 50px 100px -20px,
+    rgba(0, 0, 0, 0.3) 0px 30px 60px -30px,
+    rgba(10, 37, 64, 0.35) 0px -2px 6px 0px inset;
   max-height: calc(100% - 16px);
-  max-width: calc(100% - 16px);
-  min-height: 300px;
-  min-width: 200px;
+  max-width: calc(100svw - 16px);
+  min-width: calc(var(--game-size) / 2);
   overflow-y: auto;
   padding: 16px;
   position: absolute;
