--- a/src/app/providers/ModalProvider.css
+++ b/src/app/providers/ModalProvider.css
@@ -1,3 +1,7 @@
+:root {
+  --modal-padding: 32px;
+}
+
 .modal-provider {
   align-items: inherit;
   display: inherit;
@@ -8,24 +12,35 @@
 }
 
 .modal {
+  align-items: center;
+  background-color: rgba(0, 0, 0, 0.7);
+  bottom: 0;
+  cursor: pointer;
+  display: flex;
+  justify-content: center;
+  left: 0;
+  position: absolute;
+  right: 0;
+  top: 0;
+  transition: opacity 200ms ease;
+  z-index: 30;
+}
+
+.modal-contents {
   background-color: #f2f2f2;
-  border-radius: 16px;
-  box-shadow:
-    rgb(38, 57, 77) 0px 20px 30px -10px,
-    rgba(50, 50, 93, 0.25) 0px 50px 100px -20px,
-    rgba(0, 0, 0, 0.3) 0px 30px 60px -30px,
-    rgba(10, 37, 64, 0.35) 0px -2px 6px 0px inset;
+  border-radius: 3px;
   max-height: calc(100% - 16px);
   max-width: calc(100svw - 16px);
-  min-width: calc(var(--game-size) / 2);
-  overflow-y: auto;
-  padding: 16px;
-  position: absolute;
-  transition-duration: 200ms;
-  transition-property: opacity, transform;
-  transition-timing-function: ease;
-  will-change: transform, opacity;
-  z-index: 30;
+  padding: var(--modal-padding);
+  position: relative;
+  transition: transform 200ms ease;
+}
+
+.show-modal-checkbox-label,
+.hide-modal-checkbox-label {
+  cursor: pointer;
+  position: relative;
+  z-index: 20;
 }
 
 /* show modal when both are checked or both are unchecked */
@@ -33,11 +48,10 @@
 #modal-show ~ #modal-hide ~ .modal {
   opacity: 1;
   pointer-events: initial;
-  transform: translateY(0px);
 }
-#modal-show:checked ~ #modal-hide:checked ~ .modal-provider,
-#modal-show ~ #modal-hide ~ .modal-provider {
-  overflow: hidden;
+#modal-show:checked ~ #modal-hide:checked ~ .modal .modal-contents,
+#modal-show ~ #modal-hide ~ .modal .modal-contents {
+  transform: translateY(0px);
 }
 
 /* hide modal when one is checked and the other is unchecked */
@@ -45,9 +59,45 @@
 #modal-show ~ #modal-hide:checked ~ .modal {
   opacity: 0;
   pointer-events: none;
+}
+#modal-show:checked ~ #modal-hide ~ .modal .modal-contents,
+#modal-show ~ #modal-hide:checked ~ .modal .modal-contents {
   transform: translateY(-10px);
 }
-#modal-show:checked ~ #modal-hide ~ .modal-provider,
-#modal-show ~ #modal-hide:checked ~ .modal-provider {
-  overflow: initial;
+
+.modal-actions {
+  display: flex;
+  justify-content: flex-end;
+  margin-top: calc(var(--modal-padding) / -2);
+  position: relative;
+  width: calc(100% + var(--modal-padding) / 2);
+}
+
+.modal-actions-close {
+  align-items: center;
+  aspect-ratio: 1;
+  cursor: pointer;
+  display: flex;
+  height: 16px;
+  position: relative;
+  width: 16px;
+}
+
+.modal-actions-close:before,
+.modal-actions-close:after {
+  background-color: var(--text-color);
+  border-radius: 1px;
+  content: '';
+  height: 2px;
+  position: absolute;
+  width: 100%;
+}
+
+.modal-actions-close:before {
+  left: 0;
+  transform: rotate(45deg);
+}
+.modal-actions-close:after {
+  right: 0;
+  transform: rotate(-45deg);
 }
