--- a/src/app/components/Cell.css
+++ b/src/app/components/Cell.css
@@ -57,17 +57,31 @@
   border-right: var(--game-border);
 }
 
-.game-cell.highlight {
-  background-color: var(--accent-color);
+.game-cell.highlight,
+.game-cell.same-value {
+  background-color: var(--lowlight-color);
 }
 .game-cell.highlight > .token {
-  border: 1px solid var(--accent-color);
+  border: 1px solid var(--lowlight-color);
 }
 
 .game-cell.selected > .token,
 .game-cell.same-value > .token {
-  border: 1px solid currentColor;
-  border-radius: 0;
-  padding: 3px;
   transform: scale(0.85);
+}
+
+.game-cell.same-value > .token {
+  border: 1px solid currentColor;
+  padding: 2px;
+}
+
+.game-cell.empty > .token::before {
+  background-color: transparent;
+}
+
+.game-cell.selected {
+  background-color: var(--highlight-color);
+}
+.game-cell.selected > .token {
+  border: 1px solid var(--highlight-color);
 }
