--- a/src/app/root.css
+++ b/src/app/root.css
@@ -2,7 +2,8 @@
   --white: #ffffff;
   --html-bgcolor: #f0f0f8;
   --filled: #dfdfdf;
-  --accent-color: #9aa7c3;
+  --lowlight-color: #cadaff;
+  --highlight-color: #558bff;
   --menu-color: #7c7c81;
   --stroke-color: #444444;
   --text-color: #222222;
