--- a/src/app/root.css
+++ b/src/app/root.css
@@ -1,7 +1,7 @@
 :root {
   --white: #ffffff;
   --html-bgcolor: #f0f0f8;
-  --filled: #dfdfdf;
+  --locked: #dfdfdf;
   --lowlight-color: #cadaff;
   --highlight-color: #558bff;
   --menu-color: #7c7c81;
